syntax = "proto3";

package v1;

option go_package = "/datafeed/proto";

message DataFeedReport {
    // marketHash is the market hash of the repot
    string marketHash = 1;

    // outcome is the outcome of the report
    int32 outcome = 2;
}
